src/objects/TranscriptToBanner__c.object
<CustomObject>
    <description>Sync object to house Transcripts being pushed to Banner</description>
    <fields>
        <fullName>ActionNeeded__c</fullName>
        <label>Action Needed</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DegreeCode__c</fullName>
        <description>Degree code from the transfer attendance</description>
        <label>Degree Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquivalentCourseSequence__c</fullName>
        <label>Equivalent Course Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InstitutionIPEDCode__c</fullName>
        <description>Transfer Institution IPED code for use in STVSBGI</description>
        <label>Institution IPED Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastProcessed__c</fullName>
        <description>The last date/time that the record was processed</description>
        <label>Last Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <description>PIDM of the related Opportunity</description>
        <label>PIDM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <description>Salesforce ID of the parent object as it relates to the BANNER tables</description>
        <label>Parent Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentSequence__c</fullName>
        <description>Banner sequence of parent object</description>
        <label>Parent Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <description>Opportunity&apos;s program code as it appears in Banner</description>
        <label>Program Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PushResult__c</fullName>
        <description>Results of the attempt to push to Banner</description>
        <label>Push Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefId__c</fullName>
        <description>Id of the Salesforce record to which this control object is directly linked</description>
        <externalId>true</externalId>
        <label>Ref Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Banner sequence number of the record</description>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StudentEquivalentCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Equivalent Course</label>
        <referenceTo>StudentEquivalentCourse__c</referenceTo>
        <relationshipLabel>Transcripts to Banner</relationshipLabel>
        <relationshipName>TranscriptsToBanner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentTransferInstitution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Transfer Institution</label>
        <referenceTo>StudentTranscript__c</referenceTo>
        <relationshipLabel>Transcripts to Banner</relationshipLabel>
        <relationshipName>TranscriptsToBanner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentTransferredCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Transferred Course</label>
        <referenceTo>StudentTransferredCourse__c</referenceTo>
        <relationshipLabel>Transcripts to Banner</relationshipLabel>
        <relationshipName>TranscriptsToBanner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TranscriptSequence__c</fullName>
        <label>Transcript Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransferAttendanceSequence__c</fullName>
        <label>Transfer Attendance Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransferAttendance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer Attendance</label>
        <referenceTo>TransferAttendance__c</referenceTo>
        <relationshipLabel>Transcripts to Banner</relationshipLabel>
        <relationshipName>TranscriptsToBanner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransferredCourseSequence__c</fullName>
        <label>Transferred Course Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WGUCourseCode__c</fullName>
        <description>WGU Course Code for the equivalent course</description>
        <label>WGU Course Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Transcript to Banner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PIDM__c</columns>
        <columns>LastProcessed__c</columns>
        <columns>StudentTransferInstitution__c</columns>
        <columns>TransferAttendance__c</columns>
        <columns>StudentTransferredCourse__c</columns>
        <columns>StudentEquivalentCourse__c</columns>
        <columns>ActionNeeded__c</columns>
        <columns>RefId__c</columns>
        <columns>ParentId__c</columns>
        <columns>Sequence__c</columns>
        <columns>ParentSequence__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T2B-{0000000}</displayFormat>
        <label>Transcript to Banner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transcripts to Banner</pluralLabel>
    <recordTypes>
        <fullName>StudentEquivalentCourse</fullName>
        <active>true</active>
        <label>StudentEquivalentCourse</label>
    </recordTypes>
    <recordTypes>
        <fullName>StudentTranscript</fullName>
        <active>true</active>
        <label>StudentTranscript</label>
    </recordTypes>
    <recordTypes>
        <fullName>StudentTransferredCourse</fullName>
        <active>true</active>
        <label>StudentTransferredCourse</label>
    </recordTypes>
    <recordTypes>
        <fullName>TransferAttendance</fullName>
        <active>true</active>
        <label>TransferAttendance</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>